Closed
Bug 1713790
Opened 3 years ago
Closed 3 years ago
Permanent netwerk/protocol/http/HttpChannelChild.cpp:369:56: error: lambda capture 'start' is not used [-Werror,-Wunused-lambda-capture] when Gecko 91 merges to Beta on 2021-07-12
Categories
(Core :: Networking: HTTP, defect, P1)
Core
Networking: HTTP
Tracking
()
VERIFIED
FIXED
91 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox88 | --- | unaffected |
firefox89 | --- | unaffected |
firefox90 | --- | unaffected |
firefox91 | + | verified |
People
(Reporter: aryx, Assigned: mattwoodrow)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [necko-triaged])
Attachments
(1 file)
[task 2021-06-01T10:24:27.367Z] 10:24:27 ERROR - /builds/worker/checkouts/gecko/netwerk/protocol/http/HttpChannelChild.cpp:369:56: error: lambda capture 'start' is not used [-Werror,-Wunused-lambda-capture]
[task 2021-06-01T10:24:27.367Z] 10:24:27 INFO - aUseResponseHead, aRequestHeaders, aArgs, start]() {
[task 2021-06-01T10:24:27.367Z] 10:24:27 INFO - ~~^~~~~
Flags: needinfo?(matt.woodrow)
Updated•3 years ago
|
Keywords: regression
Assignee | ||
Updated•3 years ago
|
Flags: needinfo?(matt.woodrow)
Assignee | ||
Comment 1•3 years ago
|
||
Updated•3 years ago
|
Assignee: nobody → matt.woodrow
Status: NEW → ASSIGNED
Updated•3 years ago
|
Severity: -- → N/A
Priority: -- → P1
Whiteboard: [necko-triaged]
Pushed by mwoodrow@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/5566b07782f5
Only copy timestamp value into OnStartRequest lambda for builds that it will be used in. r=dragana,necko-reviewers
Comment 3•3 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 91 Branch
Comment 4•3 years ago
|
||
Verified fixed in latest beta sim: https://treeherder.mozilla.org/jobs?repo=try&resultStatus=testfailed%2Cbusted%2Cexception%2Cretry%2Cusercancel&revision=bfccd676723283ace1baf8ce1603c278d8bd9202
Status: RESOLVED → VERIFIED
Updated•3 years ago
|
status-firefox-esr78:
--- → unaffected
Updated•3 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•