Bug 1713790 - Only copy timestamp value into OnStartRequest lambda for builds that it will be used in. r=dragana,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D117589